feat: Agregar estilos CSS para formularios
Se agregaron estilos CSS para mejorar la apariencia y el diseño de los formularios en el sitio web. Esto incluye estilos para las etiquetas, los campos de entrada y los conjuntos de campos. Los estilos se aplican a través de selectores de clase y se definen variables CSS personalizadas para permitir la personalización fácil en el futuro.

--- a/styles.css
+++ b/styles.css
@@ -317,6 +317,11 @@ button-group {
   i {
     font-style: normal;
   }
+
+  &.primary {
+    background-color: var(--color-primary);
+    color: white;
+  }
 }
 
 /* ASPECTOS */
@@ -374,3 +379,23 @@ button-group {
 
 
 /* FIN: ANCLAS & BOTONES */
+
+
+
+/* INICIO: FORMULARIOS */
+
+label {
+  display: block;
+  padding: var(--padding);
+
+  i {
+    font-style: normal;
+  }
+}
+
+fieldset:not(.block) {
+  display: flex;
+  gap: var(--gap);
+}
+
+/* FIN: FORMULARIOS */
